[tool.poetry]
name = "geospatial"
version = "0.1.0"
description = ""
authors = ["Oswaldo Gomez <oswaldo.gomez@roche.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.85.1"
pandas = "^1.3.1"
numpy = "^1.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
